Use a semaphore to protect access to shared memory.

--- a/configure.ac
+++ b/configure.ac
@@ -161,6 +161,8 @@ gl_INIT
 
 AC_LIB_HAVE_LINKFLAGS(crypt,, [#include <unistd.h>], [crypt(0,0);])
 
+AC_LIB_HAVE_LINKFLAGS(pthread,, [#include <semaphore.h>], [sem_post(0);])
+
 AC_ARG_WITH(utmp,
   AS_HELP_STRING([--without-utmp], [do not use libutil for utmp support]),
   test_for_utmp=$withval,
