--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -69,7 +69,7 @@ ocserv_LDADD = ../gl/libgnu.a $(NEEDED_LIBOPTS) libcmd-ocserv.a
 ocserv_LDADD += $(LIBGNUTLS_LIBS) $(PAM_LIBS) $(LIBUTIL) \
 	$(LIBSECCOMP) $(LIBWRAP) $(LIBCRYPT) $(NEEDED_HTTP_PARSER_LIBS) \
 	$(LIBPROTOBUF_C_LIBS) $(LIBSYSTEMD_DAEMON) $(LIBDBUS_LIBS) \
-	$(LIBRT)
+	$(LIBRT) $(LIBPTHREAD)
 
 if PCL
 ocserv_LDADD += $(PCL_LIBS)
