--- a/tests/docker-ocserv/Dockerfile-debian-radius-config
+++ b/tests/docker-ocserv/Dockerfile-debian-radius-config
@@ -1,7 +1,7 @@
 FROM debian:testing
 
 RUN apt-get update
-RUN apt-get install -y libgnutls-deb0-28 liboath0 libprotobuf-c1
+RUN apt-get install -y libgnutls-deb0-28 liboath0 libprotobuf-c1 libev4
 RUN apt-get install -y libwrap0 libpam0g libseccomp2 libdbus-1-3 libreadline5 libnl-route-3-200
 RUN apt-get install -y libhttp-parser2.1 libpcl1 libopts25
 RUN apt-get install -y libsystemd0 valgrind nuttcp openssh-server bash
