--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,9 @@ ACLOCAL_AMFLAGS = -I m4 -I gl/m4 -I libopts/m4
 
 @CODE_COVERAGE_RULES@
 
+local-code-coverage-output: code-coverage-capture
+	cat ocserv-$(VERSION)-coverage/index.html|grep headerCovTableEntryLo|head -1|sed 's/^.*>\([0-9]\+\.[0-9]\+\s*%\)<.*$$/ coverage lines: \1/'
+
 gl:
 	gnulib-tool --add-import --lgpl=2
 
